relay website splash

--- a/src/layout/Header/styles.scss
+++ b/src/layout/Header/styles.scss
@@ -29,6 +29,12 @@
       opacity: .9;
     }
   }
+  .header-logo-type {
+    height: 34px;
+    width: 100px;
+    margin-left: 16px;
+    cursor: pointer;
+  }
   .link-list {
     margin-left: auto;
     display: flex;
