--- a/src/layout/Header/styles.scss
+++ b/src/layout/Header/styles.scss
@@ -35,6 +35,9 @@
     margin-left: 16px;
     cursor: pointer;
   }
+  .menu-toggle {
+    
+  }
   .link-list {
     margin-left: auto;
     display: flex;
