--- a/src/pages/Home/components/Footer/styles.scss
+++ b/src/pages/Home/components/Footer/styles.scss
@@ -16,7 +16,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
+    padding-left: 10px; padding-right: 10px;
     li {
       margin-right: 57px;
 
@@ -51,7 +51,7 @@
   }
 }
 
-.container-footer-icon-wrap {  
+.container-footer-icon-wrap {
   height: 30px;
   width: 30px;
   position: absolute;
