new landing image

--- a/src/pages/Home/components/Hero/styles.scss
+++ b/src/pages/Home/components/Hero/styles.scss
@@ -94,6 +94,8 @@
 
 .relative-wrapper-img {
   position: relative;
+  margin-left: auto;
+  margin-right: auto;
   img {
     max-width: none !important;
     @media screen and (max-width: 767px) {
